<resources>
    <string name="app_name">Lab 7</string>
    <string name="radio1">Windows</string>
    <string name="radio2">Mac</string>
    <string name="radio3">Linux</string>
    <string name="toastSwitch">Toast?</string>
    <string name="textHint">Name</string>
    <string name="button">Generate</string>
    <string-array name="phoneSpinner">
        <item>Android</item>
        <item>iOS</item>
        <item>Windows</item>
    </string-array>
</resources>
